--- a/portfolio-juniorxf/package.json
+++ b/portfolio-juniorxf/package.json
@@ -1,11 +1,12 @@
 {
   "name": "portfolio-juniorxf",
   "version": "1.0.0",
+  "homepage": "https://juniorxf.github.io",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "deploy": "next build && gh-pages -d out"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "22.14.1",
     "@types/react": "19.1.2",
+    "gh-pages": "^6.3.0",
     "typescript": "5.8.3"
   }
 }
